breakpoint aka media query

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,10 @@
   </head>
   <body>
 
-    <div class="container bg-indigo-500 mx-auto">
-        <p class="text-xl">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero fugit non
-            impedit optio dolore, porro ipsum aliquam est error mollitia!
-          </p>
+    <div class="container bg-indigo-500 mx-auto h-32">
+        <h2 class="text-gray-200 text-2xl text-center">
+            container
+        </h2>
     </div>
     
   </body>
