--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <div class="container bg-indigo-500 mx-auto h-32">
+    <div class="lg:container bg-indigo-500 mx-auto h-32">
         <h2 class="text-gray-200 text-2xl text-center">
             container
         </h2>
