--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,70 @@
     <link rel="stylesheet" href="output.css">
 </head>
 <body>
-    <div>
-        hello
+    <div >  Content wraper
+        
+        <div>
+            <nav>
+                <div>
+                    <h1>
+                        <a href="/">Food lelo</a>
+                    </h1>
+                </div>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <span>Home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>About</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>Contact</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div> <!--End Nav-->
+
+        <main>
+            <div>
+                <a href="#">Login</a>
+                <a href="#">Sign Up</a>
+            </div>
+            <header>
+                <h2>Recepies</h2>
+                <h3>For Programmers</h3>
+            </header>
+
+            <div>
+                <h4>Latest Recepies</h4>
+                <div>
+
+                    <!--Cards go here-->
+                    <div>
+                        <img src="./img/img1.jpg" alt="img1" srcset="">
+                        <div>
+                            <span>title</span>
+                            <span>Author name</span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <h4>Popular Recepies</h4>
+                <div>
+                    <!--Cards go here-->
+                </div>
+
+                <div>
+                    <div>Load More</div>
+                </div>
+            </div>
+        </main>
     </div>
     
 </body>
