--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,18 @@
     <title>master branch</title>
     <link rel="stylesheet" href="output.css">
 </head>
-<body>
-    <div >  Content wraper
+<body  >
+    <div >  <!--Content wraper-->
         
         <div>
             <nav>
                 <div>
-                    <h1>
+                    <h1 class="font-bold uppercase">
                         <a href="/">Food lelo</a>
                     </h1>
                 </div>
                 <ul>
-                    <li>
+                    <li class="text-gray-700 font-bold">
                         <a href="#">
                             <span>Home</span>
                         </a>
@@ -43,12 +43,12 @@
                 <a href="#">Sign Up</a>
             </div>
             <header>
-                <h2>Recepies</h2>
-                <h3>For Programmers</h3>
+                <h2 class="text-gray-700 text-6xl font-semibold">Recepies</h2>
+                <h3 class="text-2xl font-semibold">For Programmers</h3>
             </header>
 
             <div>
-                <h4>Latest Recepies</h4>
+                <h4 class="font-bold">Latest Recepies</h4>
                 <div>
 
                     <!--Cards go here-->
@@ -62,7 +62,7 @@
                 </div>
 
 
-                <h4>Popular Recepies</h4>
+                <h4 class="font-bold">Popular Recepies</h4>
                 <div>
                     <!--Cards go here-->
                 </div>
@@ -76,3 +76,18 @@
     
 </body>
 </html>
+
+
+<!-- 
+    classes Im using
+-text-colorname-stength
+-text-indigo-500 
+
+-text-xl
+-font-bold
+-uppercase
+-font-semibold
+
+
+
+-->
