lec4 margin padding and border

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <div>
             <nav>
                 <div>
-                    <h1 class="font-bold uppercase">
+                    <h1 class="font-bold uppercase p-4 border-b border-gray-200">
                         <a href="/">Food lelo</a>
                     </h1>
                 </div>
@@ -37,7 +37,7 @@
             </nav>
         </div> <!--End Nav-->
 
-        <main>
+        <main class="px-16 py-6">
             <div>
                 <a href="#">Login</a>
                 <a href="#">Sign Up</a>
@@ -48,8 +48,8 @@
             </header>
 
             <div>
-                <h4 class="font-bold">Latest Recepies</h4>
-                <div>
+                <h4 class="font-bold mt-12 pb-2 border-b-4 border-gray-200">Latest Recepies</h4>
+                <div class="mt-8">
 
                     <!--Cards go here-->
                     <div>
@@ -62,8 +62,8 @@
                 </div>
 
 
-                <h4 class="font-bold">Popular Recepies</h4>
-                <div>
+                <h4 class="font-bold mt-12 pb-2 border-b-4 border-gray-200">Popular Recepies</h4>
+                <div class="mt-8">
                     <!--Cards go here-->
                 </div>
 
@@ -87,6 +87,19 @@
 -font-bold
 -uppercase
 -font-semibold
+
+-p-1 (padding all sides)
+-py-1        (padding in y direction)
+-px-1        (padding in x direction)
+
+-border-2 (border and strength)
+-border-t-1 (border 1px to top) 
+-border-r-1 (border 1px to right side)  
+
+-border-color-strngthofcolor
+-border-gray-200
+
+
 
 
 
