--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
           </h4>
           <div class="mt-8">
             <!--Cards go here-->
-            <div class="bg-white rounded overflow-hidden shadow-md">
+            <div class="bg-white rounded overflow-hidden shadow-md relative">
               <img
                 src="./img/img1.jpg"
                 alt="img1"
@@ -65,6 +65,11 @@
               <div class="m-4">
                 <span class="font-bold block">Title</span>
                 <span class="block text-gray-500 text-sm">Author name</span>
+              </div>
+              <div
+                class="bg-red-200 text-gray-600 text-xs font-bold uppercase rounded-full p-2 absolute top-0 ml-2 mt-2"
+              >
+                <span> 20 min </span>
               </div>
             </div>
           </div>
@@ -109,7 +114,8 @@
 -rounded (it will give radius)
 -w-full (full width to its parent)
 -object-cover (stops from stretching image it will zoom it)
-
+-relative (when we want to adjust child tag relative to parent so give relative to parent)
+-absolute (give this class to child and give it position it will take position according to its parent)
 
 
 
