--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
 
       <main class="px-16 py-6 bg-gray-100 md:col-span-2">
         <div>
-          <a href="#">Login</a>
-          <a href="#">Sign Up</a>
+          <a class="btn border-black border-2 bg-white hover:bg-black hover:text-white" href="#">Login</a>
+          <a class="btn border-black border-2 bg-white hover:bg-black hover:text-white"  href="#">Sign Up</a>
         </div>
         <header>
           <h2 class="text-gray-700 text-6xl font-semibold">Recepies</h2>
@@ -133,7 +133,7 @@
           </div>
 
           <div>
-            <div>Load More</div>
+            <div class="btn">Load More</div>
           </div>
         </div>
       </main>
@@ -171,4 +171,7 @@
 -grid (it will make grid container)
 -grid-cols-3 (it will make 3 grid column inside grid container total cols can be 12)
 -col-span-2 (item will cover 2 columns in grid)
+
+-cursor-pointer
+-tracking-wider (increase space between letters)
 -->
