--- a/public/index.html
+++ b/public/index.html
@@ -23,16 +23,25 @@
             <li class="text-gray-700 font-bold">
               <a href="#">
                 <span>Home</span>
+                <svg class="w-5" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+                </svg>
               </a>
             </li>
             <li>
               <a href="#">
                 <span>About</span>
+                <svg class="w-5" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
               </a>
             </li>
             <li>
               <a href="#">
                 <span>Contact</span>
+                <svg class="w-5" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207" />
+                </svg>
               </a>
             </li>
           </ul>
@@ -74,7 +83,10 @@
               <div
                 class="bg-red-200 text-gray-600 text-xs font-bold uppercase rounded-full p-2 absolute top-0 ml-2 mt-2"
               >
-                <span> 20 min </span>
+              <svg class="w-5 inline-block" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+                <span class="inline-block"> 20 min </span>
               </div>
             </div>
 
@@ -93,7 +105,10 @@
               <div
                 class="bg-red-200 text-gray-600 text-xs font-bold uppercase rounded-full p-2 absolute top-0 ml-2 mt-2"
               >
-                <span> 20 min </span>
+              <svg class="w-5 inline-block" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+                <span class="inline-block"> 20 min </span>
               </div>
             </div>
 
@@ -112,7 +127,10 @@
               <div
                 class="bg-red-200 text-gray-600 text-xs font-bold uppercase rounded-full p-2 absolute top-0 ml-2 mt-2"
               >
-                <span> 20 min </span>
+              <svg class="w-5 inline-block" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+                <span class="inline-block"> 20 min </span>
               </div>
             </div>
 
